--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "gulp-cheerio": "^0.6.3",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.1.0",
-    "normalize.css": "^8.0.0",
-    "vue": "^2.5.16"
+    "jquery": "^3.4.1"
   }
 }
